--- a/package.json
+++ b/package.json
@@ -13,16 +13,20 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animation": "^4.0.0-beta.8",
     "@angular/animations": "^17.0.2",
+    "@angular/cdk": "^18.0.5",
     "@angular/common": "^17.0.2",
     "@angular/compiler": "^17.0.2",
     "@angular/core": "^17.0.2",
     "@angular/forms": "^17.0.2",
+    "@angular/material": "^18.0.5",
     "@angular/platform-browser": "^17.0.2",
     "@angular/platform-browser-dynamic": "^17.0.2",
     "@angular/router": "^17.0.2",
     "@capacitor/android": "5.6.0",
     "@capacitor/app": "5.0.6",
+    "@capacitor/camera": "^6.0.2",
     "@capacitor/core": "5.6.0",
     "@capacitor/haptics": "5.0.6",
     "@capacitor/ios": "^5.7.1",
@@ -40,6 +44,7 @@
     "highcharts": "^11.4.1",
     "highcharts-angular": "^4.0.0",
     "ionicons": "^7.0.0",
+    "jwt-decode": "^4.0.0",
     "mysql": "^2.18.1",
     "ngx-mask": "^17.0.7",
     "rxjs": "~7.8.0",
@@ -60,6 +65,7 @@
     "@capacitor/cli": "5.6.0",
     "@ionic/angular-toolkit": "^9.0.0",
     "@types/jasmine": "~5.1.0",
+    "@types/jwt-decode": "^3.1.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^7.26.0",
